# slovohr-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CITATION.cff  Dockerfile  FUNDING.yml  LICENSE  README.md  docker-compose.yml  lapathoniia.project.json  pyproject.toml
src/: main.py
src/abstract/: character_loader.py  global_prompt_loader.py  person_loader.py  prompt_loader.py
src/ai/: lapathoniia.py
src/assets/: .env.example
src/assets/database/: base_system_prompt.yaml  characters.yaml  global_prompt.yaml  persons.yaml  prompts.yaml  system_prompts.yaml
src/config/: app.py  lapathoniia.py  measurement_api.py  person_loader.py  prompt_loader.py  prompts_loader.py  server.py
src/core/: character_manager.py  lapathoniia.py  lapathoniia_manager.py  lapathoniia_stream.py  yaml_manager.py
src/flet_app/: main.py
src/flet_app/routes/: about.py  author.py  error404.py  settings.py
src/flet_app/utils/: elements.py  models.py  style.py  utils.py
src/models/: ai_model.py  character.py  database.py  logging.py  prompt.py
src/ui/: main.py
src/ui/routes/: about.py  author.py  error404.py  root.py  settings.py
src/ui/utils/: elements.py  models.py
src/utils/: utils.py
