[project]
name = "slovohr-ai"
version = "0.1.6"
description = "Slovohr.AI is a project created as part of the beta test for Lapathoniia, the first Ukrainian LLM inference provider."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
license = "MIT"
dependencies = [
    "flet==0.85.1",
    "flet-storage==1.1.3",
    "openai==2.37.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "flet-cli==0.85.1",
    "flet-desktop==0.85.1",
    "flet-web==0.85.1",
    "pre_commit",
    "black",
    "isort",
]

[tool.flet]
desktop_flavor = "light"
org = "org.foundation101"
product = "slovohr-ai"
company = "Personal"
copyright = "Copyright (c) 2026 Andrii Bogdanovych"

[tool.flet.app]
path = "src"

[project.urls]
"Homepage" = "https://www.bogdanovych.org"
"Repository" = "https://github.com/BogdanovychA/slovohr-ai"
"Bug Tracker" = "https://github.com/BogdanovychA/slovohr-ai/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
