[project]
name = "slovohr-ai"
version = "0.3.3"
description = "Slovohr.AI is an interactive Flet-based chat interface featuring configurable historical and fictional Ukrainian characters powered by Lapathoniia LLM provider."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
license = "MIT"
keywords = [
    "flet",
    "flutter",
    "lapathoniia",
    "llm",
    "ukrainian",
    "chat",
    "chatbot",
    "mamay",
    "lapa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "flet==0.85.2",
    "flet-storage==1.1.3",
    "openai==2.41.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml==6.0.3",
    "measurement-api==0.2.0",
]

[dependency-groups]
dev = [
    "flet-cli",
    "flet-desktop",
    "flet-web",
    "pre_commit",
    "ruff",
]

[tool.flet]
desktop_flavor = "light"
org = "org.bogdanovych"
product = "Slovohr.AI"
company = "Personal"
copyright = "Copyright (c) 2026 Andrii Bogdanovych"

[tool.flet.app]
path = "src"

[project.urls]
"Homepage" = "https://www.bogdanovych.org"
"Repository" = "https://github.com/BogdanovychA/slovohr-ai"
"Bug Tracker" = "https://github.com/BogdanovychA/slovohr-ai/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
